# DNS_Server_Rust

./: Cargo.toml  config.yaml
src/: config.rs  config.yaml  config_parser.rs  dns_server.rs  main.rs
src/dns/: mod.rs  simple_dns.rs
