[package]
name = "DNS_Server_Rust"
version = "0.1.0"
edition = "2024"

[dependencies]
trust-dns-server = "0.23.2"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
clap = { version = "4.5", default-features = false, features = ["std", "derive"] }

[workspace.lints.clippy]
bool_to_int_with_if = "allow"
default_trait_access = "warn"
manual_let_else = "warn"
or_fun_call = "warn"
single_component_path_imports = "allow"
unimplemented = "warn"
upper_case_acronyms = "allow"
use_self = "warn"